<?xml version="1.0" encoding="utf-8"?>

<!--<?xml version="1.0" encoding="utf-8"?>-->
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.Authentication.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingRight="49dp"
        android:paddingLeft="49dp" >

        <ImageView
            android:contentDescription="@string/logo"
            android:id="@+id/login__logo"
            android:layout_width="265dp"
            android:layout_height="88dp"
            android:src="@drawable/logo"/>
        <TextView
            android:id="@+id/login__title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đăng nhập"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginTop="-10dp" />
        <LinearLayout
            android:id="@+id/email_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="63dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tên đăng nhập"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:labelFor="@+id/email__box"/>

            <EditText
                android:id="@+id/email__input"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="#aaa"
                android:hint="Email hoặc username"
                android:layout_marginTop="8dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/custom_edit_text" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/password_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25.87dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mật khẩu"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:labelFor="@id/password__input"/>

            <EditText
                android:id="@+id/password__input"
                android:inputType="textPassword"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="#aaa"
                android:hint="Shhhh!"
                android:layout_marginTop="6.36dp"
                android:background="@drawable/custom_edit_text" />

        </LinearLayout>
        <TextView
            android:id="@+id/login_forget_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Quên mật khẩu?"
            android:layout_marginTop="18dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:alpha="0.6"/>
        <TextView
            android:id="@+id/registerNav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đăng ký tài khoản mới"
            android:clickable="true"
            android:onClick="onRegisterNavClick"
            android:textColor="@color/white"
            android:textSize="12.73sp"
            android:layout_marginTop="46.71dp" />
        
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="268.65dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:text="Đăng nhập"
            android:onClick="onLoginClick"
            style="@style/button_corner_radius.white"/>

    </LinearLayout>
    <AbsoluteLayout
        android:id="@+id/decor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:translationZ="-1dp"
        android:background="#12101A">

        <ImageView
            android:id="@+id/decor_blur"
            android:layout_width="346.415dp"
            android:layout_height="389dp"
            android:layout_x="135dp"
            android:layout_y="335dp"
            android:src="@drawable/blur_login" />
    </AbsoluteLayout>
    <LinearLayout
        android:id="@+id/loading_scene"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:translationZ="1dp"
        android:background="#88000000"
        android:visibility="invisible"
        android:gravity="center">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</FrameLayout>