<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".activities.Authentication.RegisterActivity">
    <LinearLayout
        android:id="@+id/register_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="48.55dp"
        android:paddingRight="48.55dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="264.67dp"
                android:layout_height="132.14dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/register_logo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-40dp"
                android:textSize="23.88sp"
                android:text="Đăng Ký Tài Khoản"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:fontFamily="@font/plusjakartasans" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:background="@drawable/custom_edit_text"
                android:paddingRight="25.5dp"
                android:paddingLeft="25.5dp"
                android:paddingTop="23dp"
                android:paddingBottom="23dp"
                android:alpha="80"
                style="@style/card_corner_radius">

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:labelFor="@+id/username_input"/>

                <EditText
                    android:id="@+id/email_regis_input"
                    android:layout_width="fill_parent"
                    android:layout_height="43.7dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_edit_text"
                    android:fontFamily="@font/plusjakartasans"
                    android:hint="Email của bạn"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="#aaa"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mật Khẩu"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:labelFor="@+id/password_input"/>

                <EditText
                    android:id="@+id/password_regis_input"
                    android:layout_width="fill_parent"
                    android:layout_height="43.7dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_edit_text"
                    android:inputType="textPassword"
                    android:hint="Shhhh!"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="#aaa"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nhập lại mật khẩu"
                    android:textSize="16dp"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/verifyPassword_regis_input"
                    android:layout_width="fill_parent"
                    android:layout_height="43.7dp"
                    android:inputType="textPassword"
                    android:hint="Nhớ nhập cho chuẩn nhé!"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="#aaa"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_edit_text">

                </EditText>

            </LinearLayout>

            <Button
                android:id="@+id/registerBtn"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23.8dp"
                android:text="Tiếp Tục"
                android:onClick="onRegisterClick"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                style="@style/button_corner_radius.white" />
        </LinearLayout>
    </LinearLayout>
    <AbsoluteLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="-999dp"
        android:background="#12101A"
        tools:ignore="Deprecated">

        <ImageView
            android:layout_width="346dp"
            android:layout_height="389dp"
            android:layout_x="130dp"
            android:layout_y="150dp"
            android:src="@drawable/register_blur" />
    </AbsoluteLayout>
    <LinearLayout
        android:id="@+id/loading_scene"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:translationZ="1dp"
        android:background="#88000000"
        android:visibility="invisible"
        android:gravity="center">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</FrameLayout>
